[package]
name = "ninecopy"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
clap = { version = "4.0", features = [ "derive" ] }
byte-unit = "4.0"
